packages/kyvernoPolicies/chart/tests/vpol/disallow-rbac-on-default-serviceaccounts-cel/chainsaw-test/clusterrolebinding-bad-group.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: disallow-rbac-on-default-serviceaccounts-bad-group
subjects:
- kind: Group
  name: system:serviceaccounts
roleRef:
  kind: ClusterRole
  name: disallow-rbac-on-default-serviceaccounts-test-role
  apiGroup: rbac.authorization.k8s.io
