packages/kyvernoPolicies/chart/tests/vpol/disallow-rbac-on-default-serviceaccounts-cel/chainsaw-test/clusterrolebinding-good.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: disallow-rbac-on-default-serviceaccounts-good
subjects:
- kind: ServiceAccount
  name: disallow-rbac-on-default-serviceaccounts
  namespace: default
roleRef:
  kind: ClusterRole
  name: disallow-rbac-on-default-serviceaccounts-test-role
  apiGroup: rbac.authorization.k8s.io
