packages/kyvernoPolicies/chart/tests/vpol/disallow-rbac-on-default-serviceaccounts-cel/chainsaw-test/rolebinding-bad-serviceaccount.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: disallow-rbac-on-default-serviceaccounts-bad-sa
subjects:
- kind: ServiceAccount
  name: default
roleRef:
  kind: ClusterRole
  name: disallow-rbac-on-default-serviceaccounts-test-role
  apiGroup: rbac.authorization.k8s.io
