packages/kyvernoPolicies/chart/tests/vpol/disallow-rbac-on-default-serviceaccounts-cel/chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
#
# BB policy: disallow-rbac-on-default-serviceaccounts-cel
# Verifies that RoleBindings and ClusterRoleBindings cannot grant access to
# default ServiceAccounts or service account groups.
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-rbac-on-default-serviceaccounts-cel
spec:
  timeouts:
    cleanup: 2m
  steps:
  - name: step-01
    try:
    - apply:
        file: test-clusterrole.yaml
    - apply:
        file: ../policy.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: ValidatingPolicy
          metadata:
            name: disallow-rbac-on-default-serviceaccounts-cel
          spec:
            validationActions:
             - Deny
            matchConditions:
              - name: scope-to-test-ns
                expression: (cel; "(object.metadata.?namespace.orValue('') == '" + string(bindings.resolve("namespace")) + "') || (object.metadata.?namespace.orValue('') == '' && object.metadata.name.startsWith('disallow-rbac-on-default-serviceaccounts-'))")
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        dryRun: true
        expect:
        - check:
            ($error != null): true
            (contains($error, 'validate.kyverno.svc')): true
            (contains($error, 'disallow-rbac-on-default-serviceaccounts-cel')): true
        file: rolebinding-bad-serviceaccount.yaml
    - apply:
        dryRun: true
        expect:
        - check:
            ($error != null): true
            (contains($error, 'validate.kyverno.svc')): true
            (contains($error, 'disallow-rbac-on-default-serviceaccounts-cel')): true
        file: clusterrolebinding-bad-group.yaml
    - apply:
        dryRun: true
        file: rolebinding-good.yaml
    - apply:
        dryRun: true
        file: clusterrolebinding-good.yaml
